[project]
name = "mlbrs"
version = "0.1.0"
description = "Example library for machine-learning-based-research-software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "huggingface>=0.0.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.optional-dependencies]
dev=["pytest"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
